--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ add_executable(nori
   include/nori/transform.h
   include/nori/vector.h
   include/nori/warp.h
+  include/nori/octtree.h
 
   # Source code files
   src/bitmap.cpp
@@ -89,6 +90,7 @@ add_executable(nori
   src/mirror.cpp
   src/dielectric.cpp
   src/normals.cpp
+  src/octtree.cpp
 )
 
 add_definitions(${NANOGUI_EXTRA_DEFS})
