--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,7 @@ add_executable(nori
   src/dielectric.cpp
   src/normals.cpp
   src/simple.cpp
+  src/ao.cpp
   src/octTreeAccel.cpp
   src/bvhAccel.cpp
 )
