--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,7 +52,6 @@ add_executable(nori
   include/nori/frame.h
   include/nori/integrator.h
   include/nori/emitter.h
-  include/nori/arealight.h
   include/nori/mesh.h
   include/nori/object.h
   include/nori/parser.h
@@ -95,6 +94,7 @@ add_executable(nori
   src/simple.cpp
   src/ao.cpp
   src/whitted.cpp
+  src/arealight.cpp
   src/octTreeAccel.cpp
   src/bvhAccel.cpp
 )
